# equity_bert_vol_forecasting

./: .gitignore  NEW_macro_events.csv  README.md  compare_significance.py  eda_rt.py  equitybert_results_original_scale.csv  equitybert_results_original_scale.txt  evaluate_har.py  evaluate_inverse.py  evaluate_lstm.py  evaluate_shap.py  pyproject.toml  req.txt  train_lstm.py  train_sp500_hourly.py
data/processed/: ES_1h.parquet
eda_figures/: eda_stats_table.csv
evaluation/: dm_test.py  evaluate_lstm.py  evaluate_shap.py  main_dm_test_run.py
runs/equityBERT/v25/: equitybert_results_v25.csv  equitybert_results_v25.txt
runs/lstm_baseline/: best_model.pth  best_model_24to5.pt  best_model_50to10.pt  lstm_predictions_50to10.xlsx  lstm_results.txt  ~$lstm_predictions_24to5.xlsx
runs/lstm_baseline/v2/: best_model_24to5.pth  best_model_50to10.pth  lstm_results_v2.txt
runs/lstm_baseline_2024-12-29/: best_model_24to5.pth  best_model_50to10.pth  lstm_predictions_50to10.xlsx  lstm_results.txt
src/: macro_event_builder.py  model_bert.py  model_lstm.py  mydataset.py  preprocess_data.py  trainer.py  utils.py
