[project]
name = "equity-bert"
version = "0.1.0"
description = "EquityBERT: Transformer-based volatility forecasting for S&P 500 futures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Deep learning
    "torch>=2.0",
    "transformers>=4.40",       # bert-base-uncased backbone
    # Data
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",            # Parquet I/O
    # Feature engineering & ML
    "scikit-learn>=1.3",
    # Visualisation & reporting
    "matplotlib>=3.7",
    "openpyxl>=3.1",            # Excel export (evaluate_lstm.py)
    # Utilities
    "tqdm>=4.66",
    "pytz>=2023.3",
    "python-dotenv>=1.0",       # FRED_API_KEY from .env
]

[project.optional-dependencies]
# Only needed for initial data download — not required for training / evaluation
data = [
    "databento>=0.37",          # ES.FUT OHLCV download (download_databento.py)
    "fredapi>=0.5",             # FRED macro event calendar (macro_event_builder.py)
]

[tool.uv]
# Keep uv.lock committed for reproducible experiment results
package = false
